# usb-serial-rs

./: Cargo.toml  Embed.toml  README.md  openocd_samd21.cfg  watch_rtt.sh
.cargo/: config
.run/: usb-serial (debug).run.xml  usb-serial (release).run.xml
src/: main.rs
