[package]
name = "usb-serial"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
trinket_m0 = { version = "0.11", features = ["usb", "rt"] }
usbd-serial = "0.1"
usb-device = "0.2"
#rtt-target = { version = "0.3", features = ["cortex-m"] }
#panic-rtt-target = { version = "0.1", features = ["cortex-m"] }

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
debug = true
opt-level = "z"
#lto = true
panic = "unwind"
#debug-assertions = true
#incremental = false
#opt-level = 3
#overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "z"
debug = true
lto = true
panic = "abort"
#rpath = false